--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,25 @@
-# nginx.conf
+# # nginx.conf
+# server {
+#     listen 8086;
+#     server_name localhost;
+#     root /usr/share/nginx/html;
+#     index index.html;
+#     try_files $uri $uri/ /index.html;
+# }
 server {
-    listen 8086;
-    server_name localhost;
+    listen 8065;
+
     root /usr/share/nginx/html;
     index index.html;
-    try_files $uri $uri/ /index.html;
+
+    # Serve JS, CSS, and assets correctly
+    location /assets/ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+
+    # Fallback to index.html for SPA routes
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
 }
