--- a/nginx.conf
+++ b/nginx.conf
@@ -1,25 +1,20 @@
-# # nginx.conf
-# server {
-#     listen 8086;
-#     server_name localhost;
-#     root /usr/share/nginx/html;
-#     index index.html;
-#     try_files $uri $uri/ /index.html;
-# }
 server {
-    listen 8065;
-
+    listen 8086;
+    server_name localhost;
     root /usr/share/nginx/html;
     index index.html;
 
-    # Serve JS, CSS, and assets correctly
-    location /assets/ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
+    location / {
+        # This directive is critical for SPAs!
+        # 1. Tries to serve the requested file ($uri)
+        # 2. If it's a directory, tries index.html in that directory ($uri/)
+        # 3. If neither is found, serves the root index.html to let the router handle the path
+        try_files $uri $uri/ /index.html;
     }
 
-    # Fallback to index.html for SPA routes
-    location / {
-        try_files $uri $uri/ /index.html;
+    # Optional: Cache control for static assets
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+        expires 30d;
+        log_not_found off;
     }
 }
