--- a/nginx.conf
+++ b/nginx.conf
@@ -1,18 +1,16 @@
 server {
-    listen 8086;
+    listen 80;
     server_name localhost;
     root /usr/share/nginx/html;
     index index.html;
 
+    # CRITICAL for SPAs: If a requested path/file is not found, serve index.html
+    # This allows the React Router to take over and load the correct component.
     location / {
-        # This directive is critical for SPAs!
-        # 1. Tries to serve the requested file ($uri)
-        # 2. If it's a directory, tries index.html in that directory ($uri/)
-        # 3. If neither is found, serves the root index.html to let the router handle the path
         try_files $uri $uri/ /index.html;
     }
 
-    # Optional: Cache control for static assets
+    # Cache control for static assets (optional, but good practice)
     location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
         expires 30d;
         log_not_found off;
