--- a/nginx.conf
+++ b/nginx.conf
@@ -1,17 +1,19 @@
 server {
-    listen 80;
+    listen 80; 
     server_name localhost;
     root /usr/share/nginx/html;
     index index.html;
 
-    # CRITICAL for SPAs: If a requested path/file is not found, serve index.html
-    # This allows the React Router to take over and load the correct component.
+    # Include the standard MIME types file for proper asset serving
+    include /etc/nginx/mime.types;
+
     location / {
+        # This directive is CRITICAL for SPAs 
         try_files $uri $uri/ /index.html;
     }
 
-    # Cache control for static assets (optional, but good practice)
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+    # Optional: Cache control for static assets 
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff2|woff|ttf|eot)$ {
         expires 30d;
         log_not_found off;
     }
