--- a/nginx.conf
+++ b/nginx.conf
@@ -1,20 +1,16 @@
 server {
-    listen 80; 
-    server_name localhost;
-    root /usr/share/nginx/html;
-    index index.html;
+  listen 8065;
 
-    # Include the standard MIME types file for proper asset serving
-    include /etc/nginx/mime.types;
+  root /usr/share/nginx/html;
+  index index.html;
 
-    location / {
-        # This directive is CRITICAL for SPAs 
-        try_files $uri $uri/ /index.html;
-    }
+  location / {
+    try_files $uri /index.html;
+  }
 
-    # Optional: Cache control for static assets 
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff2|woff|ttf|eot)$ {
-        expires 30d;
-        log_not_found off;
-    }
+  location /assets/ {
+    add_header Cache-Control "public, max-age=31536000, immutable";
+  }
+
+  error_page 404 /index.html;
 }
